--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
-
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -21,6 +22,7 @@ android {
     }
     buildFeatures {
         dataBinding true
+
     }
     buildTypes {
         release {
@@ -45,7 +47,8 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation 'androidx.core:core-splashscreen:1.0.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-
+    //material design
+    implementation 'com.google.android.material:material:1.5.0'
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
@@ -66,10 +69,14 @@ dependencies {
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    //hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-//
+//SpinKit
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 
     implementation 'com.google.android.material:material:1.5.0'
