--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,16 @@ buildscript {
         maven { url 'https://jitpack.io' }
 
     }
+    ext.hilt_version = '2.41'
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.1'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath 'com.android.tools.build:gradle:7.1.2'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.39.1"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.40"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
