--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,3 @@
-
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
@@ -56,43 +55,56 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
     implementation 'com.google.code.gson:gson:2.8.7'
 
-    // ViewModel
+    // ViewModel && Lifecycle
+
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
 
-    //coroutines
+    // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 
+    // Coroutine Lifecycle Scopes
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
     // ssp & sdp
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    //Dagger - Hilt
     //hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0'
+//    implementation 'androidx.fragment:fragment-ktx:1.4.1'
+//    implementation "androidx.lifecycle:lifecycle-viewmodel:2.4.1"
+//    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+//    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+//    implementation 'com.google.dagger:hilt-android:2.41'
+//    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+//    kapt 'com.google.dagger:hilt-android-compiler:2.41'
+//    implementation "com.google.dagger:hilt-android:2.41"
+//    kapt "com.google.dagger:hilt-compiler:2.41"
+//     implementation "androidx.hilt:hilt-lifecycle-viewmodel:2.41"
+//    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+//     implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0'
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+
+
 //SpinKit
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+
+    implementation "androidx.security:security-crypto:1.0.0"
 
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation "androidx.security:security-crypto:1.0.0"
-
-    // For Identity Credential APIs
-    implementation "androidx.security:security-identity-credential:1.0.0-alpha03"
-
-    // For App Authentication APIs
-    implementation "androidx.security:security-app-authenticator:1.0.0-alpha02"
-
-    // For App Authentication API testing
-    androidTestImplementation "androidx.security:security-app-authenticator:1.0.0-alpha02"
 }
