--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,9 @@ android {
         dataBinding true
 
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -40,6 +43,7 @@ android {
 
 dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+
     def nav_version = "2.4.1"
     // navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -65,8 +69,10 @@ dependencies {
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"
 
     // Coroutine Lifecycle Scopes
+
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
     // ssp & sdp
@@ -79,19 +85,6 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0'
-//    implementation 'androidx.fragment:fragment-ktx:1.4.1'
-//    implementation "androidx.lifecycle:lifecycle-viewmodel:2.4.1"
-//    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-//    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-//    implementation 'com.google.dagger:hilt-android:2.41'
-//    kapt 'androidx.hilt:hilt-compiler:1.0.0'
-//    kapt 'com.google.dagger:hilt-android-compiler:2.41'
-//    implementation "com.google.dagger:hilt-android:2.41"
-//    kapt "com.google.dagger:hilt-compiler:2.41"
-//     implementation "androidx.hilt:hilt-lifecycle-viewmodel:2.41"
-//    kapt 'androidx.hilt:hilt-compiler:1.0.0'
-//     implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0'
-
 
 
 //SpinKit
@@ -102,9 +95,16 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13.2'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
+
+    //local unit test
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.robolectric:robolectric:4.8.1"
+
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation 'com.google.truth:truth:1.1.3'
+    androidTestImplementation 'com.google.truth:truth:1.1.3'
 }
